...
    <string name="msg_oauth_success">authentication is success!</string>
    <string name="msg_oauth_failed">authentication is failed…</string>
    <string name="msg_media_failed_loading">failed to load media…</string>
    <string name="msg_media_failed_tweetNotFound">failed to load media: maybe the tweet was deleted…</string>

    <string name="action_totop">To Top</string>
    <string name="action_writeTweet">Write Tweet</string>
    <string name="action_sendTweet">Send Tweet</string>
    <string name="action_group_user">action for the user</string>
    <string name="action_follow">follow</string>
    <string name="action_unfollow">unfollow</string>
    <string name="action_block_retweet">block retweet</string>
    <string name="action_mute">mute</string>
    <string name="action_unmute">unmute</string>
    <string name="action_block">block</string>
    <string name="action_r4s">report for spam</string>
    <string name="action_unblock">unblock</string>
    <string name="action_unblock_retweet">unblock RT</string>
    <string name="action_resumeTweet">Resume Tweet</string>

    <string name="user_following">following</string>
    <string name="user_muting">muting</string>
    <string name="user_blocking">blocking</string>

    <string name="title_home">home</string>
    <string name="title_conv">conversation</string>
    <string name="title_detail">tweet</string>
    <string name="title_search">search</string>
    <string name="title_tweet">what\'s happening?</string>
    <string name="title_reply">reply</string>
    <string name="title_comment">comment</string>
    <string name="title_oauth">welcome</string>
    <string name="title_add_account">add registered account</string>
    <string name="title_settings">@string/drawer_menu_settings</string>
    <string name="title_owned_list">lists</string>

    <string name="media_chooser_title">choose to upload…</string>
...
    <string name="oauth_demo_tweet">welcome to aoeliyakei! this is dummy tweet. you can select me and do action with circle button appearing below.</string>
    <string name="oauth_demo_quoted">you can select only quoted tweet.</string>
    <string name="oauth_explain">login Twitter via below button and activate \'aoeliyakei\'. And then, copy PIN code and return to this app.</string>
    <string name="oauth_pin_direction">input PIN code and send it.</string>

    <string name="settings_title_sensitive">hide sensitive thumbnail</string>
    <string name="settings_key_sensitive" translatable="false">key_hide_sensitive_thumb</string>
    <bool name="settings_sensitive_default">true</bool>
    <string name="settings_key_loginUser" translatable="false">key_login_user</string>
    <string name="settings_title_loginUser">login account on launching</string>
    <string name="settings_loginUser_default" translatable="false">-1</string>
    <string name="settings_title_version">version</string>
    <string name="settings_key_version" translatable="false">key_version</string>
...
