<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Matsuda, Akihit (akihito104)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       tools:parentTag="android.support.constraint.ConstraintLayout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
    >
    <com.freshdigitable.udonroad.RoundedCornerImageView
        android:id="@+id/tw_icon"
        android:layout_width="@dimen/small_user_icon"
        android:layout_height="@dimen/small_user_icon"
        android:contentDescription="@string/desc_icon"
        android:layout_marginRight="@dimen/grid_margin"
        android:layout_marginEnd="@dimen/grid_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tw_name"
        app:layout_constraintRight_toLeftOf="@id/tw_name"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:maskerShape="@drawable/s_rounded_mask_small"
        />
    <com.freshdigitable.udonroad.CombinedScreenNameTextView
        android:id="@+id/tw_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tw_icon"
        app:layout_constraintLeft_toRightOf="@id/tw_icon"
        app:layout_constraintEnd_toStartOf="@id/tw_counter"
        app:layout_constraintRight_toLeftOf="@id/tw_counter"
        app:layout_constraintTop_toTopOf="@id/tw_icon"
        app:layout_constraintBottom_toBottomOf="@id/tw_icon"
        android:textSize="@dimen/tweet_small_fontsize"
        tools:text="name @screenname"
        />
    <TextView
        android:id="@+id/tw_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tw_icon"
        app:layout_constraintStart_toEndOf="@id/tw_name"
        app:layout_constraintLeft_toRightOf="@id/tw_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="140"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tw_replyTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tw_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tw_quote"
        app:layout_constraintRight_toLeftOf="@id/tw_quote"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:text="\@"
        android:visibility="gone"
        tools:visibility="visible"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tw_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tw_replyTo"
        app:layout_constraintLeft_toRightOf="@id/tw_replyTo"
        app:layout_constraintTop_toTopOf="@id/tw_replyTo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/grid_margin"
        android:layout_marginLeft="@dimen/grid_margin"
        app:layout_goneMarginStart="0dp"
        app:layout_goneMarginLeft="0dp"
        android:text="QT"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/tw_intext"
        android:labelFor="@id/tw_intext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tw_replyTo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="textImeMultiLine|textMultiLine"
        android:maxLines="5"
        />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/tw_append_image"
        android:layout_width="@dimen/tweetInput_addImage_size"
        android:layout_height="@dimen/tweetInput_addImage_size"
        android:layout_marginLeft="@dimen/grid_margin"
        android:layout_marginStart="@dimen/grid_margin"
        app:layout_constraintTop_toBottomOf="@id/tw_intext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tw_media_container"
        app:layout_constraintRight_toLeftOf="@id/tw_media_container"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_add_a_photo"
        />
    <com.freshdigitable.udonroad.media.ThumbnailContainer
        android:id="@+id/tw_media_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/tw_append_image"
        app:layout_constraintStart_toEndOf="@id/tw_append_image"
        app:layout_constraintLeft_toRightOf="@id/tw_append_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tw_append_image"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:thumbCount="4"
        />
</merge>