<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@android:color/primary_text_dark"
            app:layout_collapseMode="pin"
            />

        <com.freshdigitable.udonroad.TweetInputView
            android:id="@+id/main_tweet_input_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_gravity="center_horizontal|top"
            android:visibility="gone"
            tools:visibility="visible"
            android:background="?attr/colorPrimary"
            />

    </android.support.design.widget.AppBarLayout>
</layout>
