...
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <android.support.v4.view.ViewPager
            android:id="@+id/media_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <FrameLayout
            android:layout_width="match_parent"
...
